[package]
name = "v2a-converter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rayon = "1.10"
flate2 = "1.0"
indicatif = "0.17"
anyhow = "1.0"
bincode = "2.0"
byteorder = "1.5"
crossbeam-channel = "0.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lru = "0.12"
once_cell = "1.20"
tempfile = "3.10"
num_cpus = "1.16"
